--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <head>
+        <title>Interfaz de Usuario</title>
+    </head>
+
 </body>
 </html>
