--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Index.css">
+    <title>Interfaz de Usuario</title>
 </head>
 <body>
-    <head>
-        <title>Interfaz de Usuario</title>
-    </head>
 
+        <h1></h1>
+
+         <header>
+            <!-- Aquí irá la barra de navegación -->
+            <nav>
+                <ul>
+                  <li><a href="#inicio">Inicio</a></li>
+                  <li><a href="#acerca-de">Acerca de</a></li>
+                  <li><a href="#servicios">Servicios</a></li>
+                  <li><a href="#contacto">Contacto</a></li>
+                </ul>
+              </nav>
+          </header>
+
+
+
+          <main>
+            <!-- Aquí irá el contenido principal de la página -->
+          </main>
+
+
+
+          <footer>
+            <!-- Aquí irá el footer -->
+                <p>Derechos de autor © 2023, Mi Empresa</p>          
+          </footer>
+
+
+    <script src="Index.js"></script>
 </body>
 </html>
