--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Links -->
+    
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Index.css">
     <title>Interfaz de Usuario</title>
+
 </head>
 <body>
 
@@ -26,7 +30,7 @@
 
 
           <main>
-            <!-- Aquí irá el contenido principal de la página -->
+            <h1></h1>
           </main>
 
 
@@ -36,7 +40,8 @@
                 <p>Derechos de autor © 2023, Mi Empresa</p>          
           </footer>
 
-
+   <!-- Aquí Scripts -->
     <script src="Index.js"></script>
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 </body>
 </html>
