--- a/Index.html
+++ b/Index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Links -->
-    
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Index.css">
-    <title>Interfaz de Usuario</title>
-
+  <title>Material Design Navigation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="Index.css">
 </head>
-<body>
+<body class="dark-mode">
 
-        <h1></h1>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">Material Design Navigation</a>
+      <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-         <header>
-            <!-- Aquí irá la barra de navegación -->
-            <nav>
-                <ul>
-                  <li><a href="#inicio">Inicio</a></li>
-                  <li><a href="#acerca-de">Acerca de</a></li>
-                  <li><a href="#servicios">Servicios</a></li>
-                  <li><a href="#contacto">Contacto</a></li>
-                </ul>
-              </nav>
-          </header>
+  <!--FUNCION Slid-->
+  <ul class="sidenav" id="mobile-nav">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
 
+  <!--FUNCION DEL BOTON PARA CAMBIAR DE MODO OSCURO Y MODO CLARO-->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large waves-effect waves-light dark-mode-toggle">
+      <i class="material-icons">brightness_6</i>
+    </a>
+  </div>
 
-
-          <main>
-            <h1><title>Cambios</title></h1>
-          </main>
-
-
-
-          <footer>
-            <!-- Aquí irá el footer -->
-                <p>Derechos de autor © 2023, Mi Empresa</p>          
-          </footer>
-
-   <!-- Aquí Scripts -->
-    <script src="Index.js"></script>
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="Index.js"></script>
 </body>
 </html>
+
