--- a/Index.html
+++ b/Index.html
@@ -14,18 +14,18 @@
       <a href="#" class="brand-logo center">Material Design Navigation</a>
       <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Acerca</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
     </div>
   </nav>
 
   <!--FUNCION Slid-->
   <ul class="sidenav" id="mobile-nav">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Acerca</a></li>
+    <li><a href="#">Contacto</a></li>
   </ul>
 
   <!--FUNCION DEL BOTON PARA CAMBIAR DE MODO OSCURO Y MODO CLARO-->
