--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,10 @@
       <i class="material-icons">brightness_6</i>
     </a>
   </div>
+<!--LINEAS PARA EL FOOTER-->
 
+
+<!--LINEAS PARA LOS SCRIPT-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="Index.js"></script>
