--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,33 @@
     </a>
   </div>
 <!--LINEAS PARA EL FOOTER-->
-
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m6">
+        <h5 class="white-text">Acerca de</h5>
+        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="col s12 m4 offset-m2">
+        <h5 class="white-text">Contactos</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Phone: 555-555-5555</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Email: info@yourcompany.com</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Address: 123 Main St, Anytown USA</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <p class="center-align grey-text text-lighten-4">&copy; 2023 Your Company</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <!--LINEAS PARA LOS SCRIPT-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
