Dos paneles para el contenido de la pagina

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="dark-mode">
 
+  <!--ESPACIO PARA LA NAVEGACION-->
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo center">Material Design Navigation</a>
@@ -27,6 +28,28 @@
     <li><a href="#">Acerca</a></li>
     <li><a href="#">Contacto</a></li>
   </ul>
+ <!--ESPACIA PARA CONTENIDO DE LA PAGINA-->
+
+ <div class="news-container">
+  <div class="news-panel">
+    <h2>Elon Musk anuncia nueva misión espacial</h2>
+    <img src="https://via.placeholder.com/350x200" alt="Imagen de la noticia">
+    <p>Elon Musk, CEO de SpaceX, ha anunciado el lanzamiento de una nueva misión espacial con destino a Marte. La misión, que se llevará a cabo en el año 2025, tiene como objetivo explorar el planeta rojo y buscar posibles signos de vida.</p>
+    <a href="#">Leer más</a>
+  </div>
+  <div class="news-panel">
+    <h2>Apple anuncia nuevo iPhone 14</h2>
+    <img src="https://via.placeholder.com/350x200" alt="Imagen de la noticia">
+    <p>La compañía de tecnología Apple ha anunciado el lanzamiento de su nuevo modelo de iPhone, el iPhone 14. El nuevo dispositivo cuenta con una pantalla más grande y una cámara mejorada, entre otras características.</p>
+    <a href="#">Leer más</a>
+  </div>
+</div>
+
+
+
+
+
+
 
   <!--FUNCION DEL BOTON PARA CAMBIAR DE MODO OSCURO Y MODO CLARO-->
   <div class="fixed-action-btn">
