Creacion de footer y Estilo del mismo

--- a/Index.html
+++ b/Index.html
@@ -90,7 +90,11 @@
   </div>
   
 <!--LINEAS PARA EL FOOTER-->
-
+<footer class="bg-dark text-center p-2"> 
+  <p class="h4">
+    Desarrollado en 2023 &copy;
+  </p>
+</footer>
 
 <!--LINEAS PARA LOS SCRIPT-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
