Traduccion de Texto

--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,9 @@
 
  <!--ESPACIO PARA CONTENIDO DE LA PAGINA-->
  <div class="welcome-section" id="inicio">
-  <h1 data-aos="fade-up">Bienvenido a nuestro sitio</h1>
-  <p data-aos="fade-up" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet felis et turpis suscipit iaculis vel nec elit. Donec id elit lorem. </p>
-  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Learn More</a>
+  <h1 data-aos="fade-up">Bienvenido a nuestro sitio Web</h1>
+  <p data-aos="fade-up" data-aos-delay="300">Hola!!! nos encanta tenerte aquí<br>Esperamos que puedas disfurtar del estilo que te brindamos.</p>
+  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Ver Mas</a>
 </div>
  <!--ESPACIO PARA ABOUT DE LA PAGINA-->
 <section class="about-section" id="acerca">
