Cambios en la traducion y lorem

--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,8 @@
       </div>
       <div class="col-md-6">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod ornare odio, non efficitur purus tincidunt vel. Praesent iaculis ligula nunc, vel convallis nibh semper nec. Nullam consectetur, mauris vel bibendum rhoncus, magna risus ultrices augue, ut bibendum ex nunc id velit. Suspendisse ut blandit arcu.</p>
-        <p>Proin quis fringilla eros. Curabitur vehicula eros et nulla suscipit, quis sodales tortor bibendum. Phasellus blandit libero eu egestas ultricies. Nulla suscipit enim vel nisi porttitor, sed rutrum nulla faucibus. Duis vitae mauris vitae tellus pulvinar ultrices vel id tellus. Sed volutpat enim eget augue euismod, vel vestibulum lorem vestibulum. Praesent faucibus justo eu leo semper, a gravida magna gravida.</p>
+        <p>Somos un grupo de dos desarrolladores que estan aprendiendo frontend para dar una experiencia a nuestros clientes en la apartado de interfaz de usuarios.</p>
+        <p>Nos encanta estilizar y decorar sitios web o paginas web con nuestra imaginacion agregando muchas funciones para que los visitantes se mantegan muy activos asi puedan disfruten al 100% ademas de tener una expericia muy agradable y minimalista.</p>
       </div>
     </div>
   </div>
@@ -54,7 +54,7 @@
 <section class="contact-section" id="contacto">
   <div class="col-md-6">
     <h2>Contact Information</h2>
-    <p><i class="fa fa-map-marker"></i> 123 Main Street, Anytown USA 12345</p>
+    <p><i class="fa fa-map-marker"></i> 2367 Calle Principal, Cualquier Ciudad De Colombia 12345</p>
     <p><i class="fa fa-phone"></i> 555-555-5555</p>
     <p><i class="fa fa-envelope"></i> info@example.com</p>
   </div>
@@ -92,7 +92,7 @@
 <!--LINEAS PARA EL FOOTER-->
 <footer class="bg-dark text-center p-2"> 
   <p class="h4">
-    Desarrollado en 2023 &copy;
+    Desarrollado en 2023 &copy; por RichardZam & Andrey1069
   </p>
 </footer>
 
