Traduccion de Texto2

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
         <img src="about.jpg" alt="Profile picture">
       </div>
       <div class="col-md-6">
-        <h2>About Me</h2>
+        <h2>Acerca de</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod ornare odio, non efficitur purus tincidunt vel. Praesent iaculis ligula nunc, vel convallis nibh semper nec. Nullam consectetur, mauris vel bibendum rhoncus, magna risus ultrices augue, ut bibendum ex nunc id velit. Suspendisse ut blandit arcu.</p>
         <p>Proin quis fringilla eros. Curabitur vehicula eros et nulla suscipit, quis sodales tortor bibendum. Phasellus blandit libero eu egestas ultricies. Nulla suscipit enim vel nisi porttitor, sed rutrum nulla faucibus. Duis vitae mauris vitae tellus pulvinar ultrices vel id tellus. Sed volutpat enim eget augue euismod, vel vestibulum lorem vestibulum. Praesent faucibus justo eu leo semper, a gravida magna gravida.</p>
       </div>
@@ -71,10 +71,10 @@
             <input type="email" id="email" class="form-control" required>
           </div>
           <div class="form-group">
-            <label for="message">Message</label>
+            <label for="message">Mensaje u Observacion</label>
             <textarea id="message" class="form-control" rows="5" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send Message</button>
+          <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
         </form>
       </div>
       
