--- a/Index.html
+++ b/Index.html
@@ -31,9 +31,9 @@
 
  <!--ESPACIO PARA CONTENIDO DE LA PAGINA-->
  <div class="welcome-section" id="inicio">
-  <h1 data-aos="fade-up">Bienvenido a nuestro sitio Web</h1>
-  <p data-aos="fade-up" data-aos-delay="300">Hola!!! nos encanta tenerte aquí<br>Esperamos que puedas disfurtar del estilo que te brindamos.</p>
-  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Ver Mas</a>
+  <h1 data-aos="fade-up">Bienvenido a nuestro sitio</h1>
+  <p data-aos="fade-up" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet felis et turpis suscipit iaculis vel nec elit. Donec id elit lorem. </p>
+  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Learn More</a>
 </div>
  <!--ESPACIO PARA ABOUT DE LA PAGINA-->
 <section class="about-section" id="acerca">
@@ -43,9 +43,9 @@
         <img src="about.jpg" alt="Profile picture">
       </div>
       <div class="col-md-6">
-        <h2>Acerca de</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod ornare odio, non efficitur purus tincidunt vel. Praesent iaculis ligula nunc, vel convallis nibh semper nec. Nullam consectetur, mauris vel bibendum rhoncus, magna risus ultrices augue, ut bibendum ex nunc id velit. Suspendisse ut blandit arcu.</p>
-        <p>Proin quis fringilla eros. Curabitur vehicula eros et nulla suscipit, quis sodales tortor bibendum. Phasellus blandit libero eu egestas ultricies. Nulla suscipit enim vel nisi porttitor, sed rutrum nulla faucibus. Duis vitae mauris vitae tellus pulvinar ultrices vel id tellus. Sed volutpat enim eget augue euismod, vel vestibulum lorem vestibulum. Praesent faucibus justo eu leo semper, a gravida magna gravida.</p>
+        <h2>About Me</h2>
+        <p>Somos un grupo de dos desarrolladores que estan aprendiendo frontend para dar una experiencia a nuestros clientes en la apartado de interfaz de usuarios.</p>
+        <p>Nos encanta estilizar y decorar sitios web o paginas web con nuestra imaginacion agregando muchas funciones para que los visitantes se mantegan muy activos asi puedan disfruten al 100% ademas de tener una expericia muy agradable y minimalista.</p>
       </div>
     </div>
   </div>
@@ -53,8 +53,8 @@
  <!--ESPACIO PARA CONTENIDO DE LA PAGINA-->
 <section class="contact-section" id="contacto">
   <div class="col-md-6">
-    <h2>Informacion de Contacto</h2>
-    <p><i class="fa fa-map-marker"></i> 123 Main Street, Anytown USA 12345</p>
+    <h2>Contact Information</h2>
+    <p><i class="fa fa-map-marker"></i> 2367 Calle Principal, Cualquier Ciudad De Colombia 12345</p>
     <p><i class="fa fa-phone"></i> 555-555-5555</p>
     <p><i class="fa fa-envelope"></i> info@example.com</p>
   </div>
@@ -71,10 +71,10 @@
             <input type="email" id="email" class="form-control" required>
           </div>
           <div class="form-group">
-            <label for="message">Mensaje u Observacion</label>
+            <label for="message">Message</label>
             <textarea id="message" class="form-control" rows="5" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+          <button type="submit" class="btn btn-primary">Send Message</button>
         </form>
       </div>
       
@@ -92,7 +92,7 @@
 <!--LINEAS PARA EL FOOTER-->
 <footer class="bg-dark text-center p-2"> 
   <p class="h4">
-    Desarrollado en 2023 &copy;
+    Desarrollado en 2023 &copy; por RichardZam & Andrey1069
   </p>
 </footer>
 
