--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="Index.css">
+  <!--Richard Zambrano - Andrey Ramirez-->
 </head>
 <body class="dark-mode">
 
@@ -31,9 +32,9 @@
 
  <!--ESPACIO PARA CONTENIDO DE LA PAGINA-->
  <div class="welcome-section" id="inicio">
-  <h1 data-aos="fade-up">Bienvenido a nuestro sitio</h1>
-  <p data-aos="fade-up" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet felis et turpis suscipit iaculis vel nec elit. Donec id elit lorem. </p>
-  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Learn More</a>
+  <h1 data-aos="fade-up">Bienvenido a nuestro sitio Web</h1>
+  <p data-aos="fade-up" data-aos-delay="300">Hola!!! nos encanta tenerte aquí<br>Esperamos que puedas disfurtar del estilo que te brindamos.</p>
+  <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="600">Ver Mas</a>
 </div>
  <!--ESPACIO PARA ABOUT DE LA PAGINA-->
 <section class="about-section" id="acerca">
@@ -43,7 +44,7 @@
         <img src="about.jpg" alt="Profile picture">
       </div>
       <div class="col-md-6">
-        <h2>About Me</h2>
+        <h2>Acerca de</h2>
         <p>Somos un grupo de dos desarrolladores que estan aprendiendo frontend para dar una experiencia a nuestros clientes en la apartado de interfaz de usuarios.</p>
         <p>Nos encanta estilizar y decorar sitios web o paginas web con nuestra imaginacion agregando muchas funciones para que los visitantes se mantegan muy activos asi puedan disfruten al 100% ademas de tener una expericia muy agradable y minimalista.</p>
       </div>
@@ -53,7 +54,7 @@
  <!--ESPACIO PARA CONTENIDO DE LA PAGINA-->
 <section class="contact-section" id="contacto">
   <div class="col-md-6">
-    <h2>Contact Information</h2>
+    <h2>Informacion de Contacto</h2>
     <p><i class="fa fa-map-marker"></i> 2367 Calle Principal, Cualquier Ciudad De Colombia 12345</p>
     <p><i class="fa fa-phone"></i> 555-555-5555</p>
     <p><i class="fa fa-envelope"></i> info@example.com</p>
@@ -74,7 +75,7 @@
             <label for="message">Message</label>
             <textarea id="message" class="form-control" rows="5" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send Message</button>
+          <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
         </form>
       </div>
       
